--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.DrawActivity" android:theme="@android:style/Theme.NoTitleBar" android:label="@string/app_name"></activity>
+        <activity android:name=".activities.DrawActivity" android:theme="@android:style/Theme.NoTitleBar" android:label="@string/app_name" android:screenOrientation="portrait"></activity>
 
     </application>
 </manifest>
