--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:name=".application.Deepnotes">
         <activity android:name=".activities.MainActivity"
-                  android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar">
+                  android:label="@string/app_name" android:theme="@android:style/Theme.NoTitleBar" android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
