--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -18,7 +18,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.DrawActivity" android:label="@string/app_name" android:screenOrientation="portrait" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
+        <activity android:name=".activities.DrawActivity" android:label="@string/app_name" android:screenOrientation="portrait" android:configChanges="orientation" android:theme="@android:style/Theme.NoTitleBar.Fullscreen"></activity>
 
     </application>
 </manifest>
